--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,25 +1,9 @@
-yangshun:
-  name: Yangshun Tay
-  title: Ex-Meta Staff Engineer, Co-founder GreatFrontEnd
-  url: https://linkedin.com/in/yangshun
-  image_url: https://github.com/yangshun.png
+Paulo:
+  name: Paulo Nunes
+  title: Programador full-stack, fundador da Water Rock Learn
+  url: www.linkedin.com/in/paulo-victor-nunes-cunha-037a93287
+  image_url: https://avatars.githubusercontent.com/u/165535750?v=4
   page: true
   socials:
-    x: yangshunz
-    linkedin: yangshun
-    github: yangshun
-    newsletter: https://www.greatfrontend.com
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
-  socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+    linkedin: paulo victor nunes cunha
+    github: Paulo-V-Developer34
